--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "url": "https://github.com/contactimpact/bot-weather/issues"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "openweather-apis": "^3.0.2"
   },
   "description": "See code, its izi.",
   "devDependencies": {},
